--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ twitter_username: iiSatana
 github_username:  rotanov
 
 markdown: kramdown
-highlighter: rouge
+highlighter: true
 paginate: 8
 paginate_path: "blog/page:num/"
+permalink: pretty
